--- a/MyBasicCss/style.css
+++ b/MyBasicCss/style.css
@@ -1,23 +1,22 @@
 @charset "utf-8";
 
-section {
-  border: 1px solid lightgray;
-  width: 400px;
-  height: 250px;
-  margin: 100px auto;
-  text-align: center;
-}
-
-
 h1 {
+  font-size: 25px;
+  border-bottom: 3px solid lightgray;
+  width: 100px;
   margin: 0 auto;
-  font-size: 16px;
-  background-color: gray;
-  padding: 8px;
+  background-color: blue;
 }
 
-p {
-  border-top: 1px solid lightgray;
-  margin: 0 auto;
-  padding: 8px;
+.features {
+  background-color: lightgray;
+  border-radius: 5px;
+}
+
+th {
+  background-color: lightgray;
+}
+
+button {
+  color: skyblue;
 }
